# haskell-draughts

./: .gitignore  README.md  draughts.cabal
src/: Board.hs  Evaluation.hs  Generation.hs  Main.hs  Moves.hs  Parser.hs  Utils.hs
