name:              draughts
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable draughts
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   parsec,
                   parsec-numbers,
                   transformers,
                   containers
  extensions: DoAndIfThenElse
